--- a/overview.html
+++ b/overview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Overview</title>
+    <title>Moodsphere - Overview</title>
 
     <!-- STYLESHEETS: SEMANTIC UI, GOOGLE FONTS, CUSTOM -->
     <link
@@ -22,20 +22,20 @@
   <body class="site">
     <!-- NAVIGATION -->
     <div class="ui secondary pointing menu">
-      <a class="item">
+      <a class="item" href="homepage.html">
         Home
       </a>
       <a id="add-entry-btn" class="item">
         Add Entry
       </a>
-      <a class="active item">
+      <a class="active item" href="overview.html">
         Overview
       </a>
-      <a class="item">
+      <a class="item" href="discover.html">
         Discover
       </a>
       <div class="right menu">
-        <a class="ui item">
+        <a class="ui item" id="logout-btn">
           Logout
         </a>
       </div>
