--- a/log-in.html
+++ b/log-in.html
@@ -1,103 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Moodsphere - Log In</title>
 
-    <!-- STYLESHEETS: SEMANTIC UI, GOOGLE FONTS, CUSTOM -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
-    />
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"
-    />
-    <link rel="stylesheet" href="assets/css/log-in.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Moodsphere - Log In</title>
 
-  <body>
-    <!-- LOG IN / SIGN UP FORM -->
-    <div class="ui middle aligned center aligned grid">
-      <div class="column">
-        <h2 class="ui image header">
-          <img src="assets/images/logo.png" class="image" />
-          <div class="content">
-            Log In to your account
-          </div>
-        </h2>
-        <form class="ui large form">
-          <div class="ui stacked segment">
-            <div class="field">
-              <div class="ui left icon input">
-                <i class="user icon"></i>
-                <input
-                  type="text"
-                  name="email"
-                  id="email-input"
-                  placeholder="E-mail address"
-                />
-              </div>
+  <!-- STYLESHEETS: SEMANTIC UI, GOOGLE FONTS, CUSTOM -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
+  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+  <link rel="stylesheet" href="assets/css/log-in.css" />
+</head>
+
+<body>
+  <!-- LOG IN / SIGN UP FORM -->
+  <div class="ui middle aligned center aligned grid">
+    <div class="column">
+      <h2 class="ui image header">
+        <img src="./assets/pattern/Mood Tracker Logo.PNG" class="image" />
+        <div class="content">
+          Log In to your account
+        </div>
+      </h2>
+      <form class="ui large form">
+        <div class="ui stacked segment">
+          <div class="field">
+            <div class="ui left icon input">
+              <i class="user icon"></i>
+              <input type="text" name="email" id="email-input" placeholder="E-mail address" />
             </div>
-            <div class="field">
-              <div class="ui left icon input">
-                <i class="lock icon"></i>
-                <input
-                  type="password"
-                  name="password"
-                  id="password-input"
-                  placeholder="Password"
-                />
-              </div>
+          </div>
+          <div class="field">
+            <div class="ui left icon input">
+              <i class="lock icon"></i>
+              <input type="password" name="password" id="password-input" placeholder="Password" />
             </div>
-            <button class="ui fluid large submit button" id="login-btn">
-              Log In
-            </button>
           </div>
-
-          <!-- ERROR MESSAGES -->
-          <div id="email-error-message" class="ui error message">
-            <p id="letter" class="invalid">Email must be valid</p>
-          </div>
-          <div id="password-error-message" class="ui error message">
-            <h3>Password must contain the following:</h3>
-            <p id="letter" class="invalid">
-              A <strong>lowercase</strong> letter
-            </p>
-            <p id="capital" class="invalid">
-              A <strong>capital (uppercase)</strong> letter
-            </p>
-            <p id="number" class="invalid">A <strong>number</strong></p>
-            <p id="length" class="invalid">
-              Minimum <strong>8 characters</strong>
-            </p>
-          </div>
-        </form>
-
-        <div class="ui message">
-          Don't have an account, yet?
-          <button id="signup-btn" class="ui small submit button">
-            Sign Up
+          <button class="ui fluid large submit button" id="login-btn">
+            Log In
           </button>
         </div>
+
+        <!-- ERROR MESSAGES -->
+        <div id="email-error-message" class="ui error message">
+          <p id="letter" class="invalid">Email must be valid</p>
+        </div>
+        <div id="password-error-message" class="ui error message">
+          <h3>Password must contain the following:</h3>
+          <p id="letter" class="invalid">
+            A <strong>lowercase</strong> letter
+          </p>
+          <p id="capital" class="invalid">
+            A <strong>capital (uppercase)</strong> letter
+          </p>
+          <p id="number" class="invalid">A <strong>number</strong></p>
+          <p id="length" class="invalid">
+            Minimum <strong>8 characters</strong>
+          </p>
+        </div>
+      </form>
+
+      <div class="ui message">
+        Don't have an account, yet?
+        <button id="signup-btn" class="ui small submit button">
+          Sign Up
+        </button>
       </div>
     </div>
+  </div>
 
-    <!-- FIREBASE -->
-    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
-    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
+  <!-- FIREBASE -->
+  <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
+  <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
 
-    <!-- JAVASCRIPT, JQUERY -->
-    <script
-      src="https://code.jquery.com/jquery-3.1.1.min.js"
-      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-    <script type="text/javascript" src="assets/javascript/log-in.js"></script>
-  </body>
+  <!-- JAVASCRIPT, JQUERY -->
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+  <script type="text/javascript" src="assets/javascript/log-in.js"></script>
+</body>
+
 </html>
