--- a/discover.html
+++ b/discover.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <!-- SITE PROPERTIES -->
     <title>Moodsphere - Discover</title>
 
-    <!-- STYLESHEETS: SEMANTIC UI, GOOGLE FONTS, CUSTOM -->
+    <!-- STYLESHEETS: SEMANTIC UI, ICONS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
@@ -16,8 +18,15 @@
       type="type/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/themes/material/assets/fonts/icons.woff"
     />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"
+    />
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
-    <link rel="stylesheet" href="assets/css/discover.css" />
+
+    <!-- CUSTOM STYLESHEET -->
+    <link rel="stylesheet" type="text/css" href="assets/css/discover.css" />
   </head>
 
   <body class="site">
@@ -43,8 +52,8 @@
     </div>
 
     <main class="site-content">
-      <!-- LISTEN: MUSIC -->
-      <h3 class="discover-section"><i class="headphones icon"></i> Listen</h3>
+      <!-- WATCH: VIDEOS -->
+      <h3 class="discover-section"><i class="film icon"></i> Watch</h3>
       <!-- Slider main container -->
       <div class="swiper-container">
         <!-- Additional required wrapper -->
@@ -65,13 +74,13 @@
           </div>
           </a>
           <div class="swiper-slide">
-            <a href="#">
+            <a href="https://youtu.be/85QY_d-8J2M">
             <div class="ui card listen">
               <div class="content">
-                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned header card-heading">Anxiety: A Cancer of the Mind</div>
                 <div class="center aligned description card-body">
                   <p>
-                    Description Description Description Description Description Description
+                    TED Talk by Aneysha Bhat
                   </p>
                 </div>
               </div>
@@ -126,21 +135,21 @@
         <div class="swiper-button-next"></div>
       </div>
 
-      <!-- WATCH: VIDEOS -->
-      <h3 class="discover-section"><i class="film icon"></i> Watch</h3>
+      <!-- LISTEN: MUSIC -->
+      <h3 class="discover-section"><i class="headphones icon"></i> Listen</h3>
       <!-- Slider main container -->
       <div class="swiper-container">
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide">
-            <a href="#">
+            <a href="https://open.spotify.com/playlist/2EXP6pCDBdF4yRj2LZ6xFr">
             <div class="ui card watch">
               <div class="content">
-                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned header card-heading">Calming Music Playlist</div>
                 <div class="center aligned description card-body">
                   <p>
-                    Description Description Description Description Description Description
+                    A Spotify Playlist full of calming music by Calming Music Academy.
                   </p>
                 </div>
               </div>
@@ -148,13 +157,13 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="#">
+            <a href="https://open.spotify.com/show/79GbkgP2sxA8FJ97Qk1GKZ">
             <div class="ui card watch">
               <div class="content">
-                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned header card-heading">Health Anxiety Podcast Show</div>
                 <div class="center aligned description card-body">
                   <p>
-                    Description Description Description Description Description Description
+                    Let Dennis Simsek guide you through the diagnosis, symptoms, and coping strategies for anxiety.
                   </p>
                 </div>
               </div>
@@ -162,13 +171,13 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="#">
+            <a href="https://open.spotify.com/show/6XPm7Mr08nFVWX4Abcqmek">
             <div class="ui card watch">
               <div class="content">
-                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned header card-heading">Relaxing Tunes</div>
                 <div class="center aligned description card-body">
                   <p>
-                    Description Description Description Description Description Description
+                    A Spotify Playlist full of relaxing tunes.
                   </p>
                 </div>
               </div>
@@ -176,13 +185,13 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="#">
+            <a href="https://open.spotify.com/show/6925GqlCoRoCEo8UYy17FQ">
             <div class="ui card watch">
               <div class="content">
-                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned header card-heading">Love Your Anxiety</div>
                 <div class="center aligned description card-body">
                   <p>
-                    Description Description Description Description Description Description
+                    Listen to Emilie Clarke's personal anxiety story and get ideas on how to cope with yours.
                   </p>
                 </div>
               </div>
@@ -190,13 +199,13 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="#">
+            <a href="https://www.youtube.com/watch?v=YFSc7Ck0Ao0">
             <div class="ui card watch">
               <div class="content">
-                <div class="center aligned header card-heading">Title</div>
+                <div class="center aligned header card-heading">Breathing Meditation</div>
                 <div class="center aligned description card-body">
                   <p>
-                    Description Description Description Description Description Description
+                    5-minute breathing meditation exercise guided by Diana Winston, UCLA Mindful Awareness Research Center.
                   </p>
                 </div>
               </div>
@@ -296,6 +305,12 @@
     <!-- GRAPH -->
     <footer id="graph"></footer>
 
+    <!-- FIREBASE -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-database.js"></script>
+
     <!-- JAVASCRIPT, JQUERY -->
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
@@ -303,7 +318,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-    <script type="text/javascript" src="assets/javascript/discover.js"></script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
   </body>
 </html>
