--- a/overview.html
+++ b/overview.html
@@ -4,19 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <!-- SITE PROPERTIES -->
     <title>Moodsphere - Overview</title>
 
-    <!-- STYLESHEETS: SEMANTIC UI, GOOGLE FONTS, CUSTOM -->
+    <!-- STYLESHEETS: SEMANTIC UI, ICONS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="type/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/themes/material/assets/fonts/icons.woff"
     />
     <link
       type="text/css"
       rel="stylesheet"
       href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"
     />
-    <link rel="stylesheet" href="assets/css/add-entry_overview.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+
+    <!-- CUSTOM STYLESHEET -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/add-entry_overview.css"
+    />
   </head>
 
   <body class="site">
@@ -214,9 +228,7 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script
-      type="text/javascript"
-      src="assets/javascript/add-entry_overview.js"
-    ></script>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
   </body>
 </html>
