commented out weather api, changed quote text color, added logo to homepage, got rid of blank white space

--- a/homepage.html
+++ b/homepage.html
@@ -60,13 +60,12 @@
 
     <!-- MAIN CONTENT -->
     <div class="ui text container">
+      <img id="logo" src="assets/images/Mood Tracker Logo.PNG">
       <h1 class="ui inverted header">Moodsphere</h1>
       <h2 id="quote"></h2>
       <h4 id="author"></h4>
     </div>
   </div>
-
-  <div class="ui vertical stripe segment"></div>
 
   <div class="ui vertical stripe quote segment">
     <div class="ui equal width stackable internally celled grid">
