--- a/homepage.html
+++ b/homepage.html
@@ -1,118 +1,149 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- STANDARD META -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
 
-<head>
-  <!-- STANDARD META -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <!-- SITE PROPERTIES -->
+    <title>Moodsphere - Home</title>
 
-  <!-- SITE PROPERTIES -->
-  <title>Moodsphere - Home</title>
+    <!-- STYLESHEETS: SEMANTIC UI, ICONS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="type/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/themes/material/assets/fonts/icons.woff"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"
+    />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
 
-  <!-- STYLESHEETS: SEMANTIC UI, ICONS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
-  <link rel="stylesheet" type="type/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/themes/material/assets/fonts/icons.woff" />
-  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
-  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+    <!-- CUSTOM STYLESHEET -->
+    <link rel="stylesheet" type="text/css" href="assets/css/homepage.css" />
+  </head>
 
-  <!-- CUSTOM STYLESHEET -->
-  <link rel="stylesheet" type="text/css" href="assets/css/homepage.css" />
-</head>
-
-<body>
-  <!-- NAVIGATION -->
-  <div class="ui sticky secondary pointing menu">
-    <a class="active item" href="homepage.html">
-      Home
-    </a>
-    <a id="add-entry-btn" class="item">
-      Add Entry
-    </a>
-    <a class="item" href="overview.html">
-      Overview
-    </a>
-    <a class="item" href="discover.html">
-      Discover
-    </a>
-    <div class="right menu">
-      <a class="ui item" id="logout-btn">
-        Logout
+  <body>
+    <!-- NAVIGATION -->
+    <div class="ui sticky secondary pointing menu">
+      <a class="active item" href="homepage.html">
+        Home
       </a>
-    </div>
-  </div>
-
-  <div class="ui inverted vertical masthead center aligned segment">
-    <div class="ui container">
-      <div class="ui large secondary inverted pointing menu">
-        <div class="right item">
-          <h2 class="ui icon header">
-            <img id="logo" src="assets/images/Mood Tracker Logo.PNG">
-            <div class="content" style="color: white">
-            </div>
-          </h2>
-        </div>
+      <a id="add-entry-btn" class="item">
+        Add Entry
+      </a>
+      <a class="item" href="overview.html">
+        Overview
+      </a>
+      <a class="item" href="discover.html">
+        Discover
+      </a>
+      <div class="right menu">
+        <a class="ui item" id="logout-btn">
+          Logout
+        </a>
       </div>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div class="ui text container">
-
-      <h1 class="ui inverted header">Moodsphere</h1>
-      <h2 id="quote"></h2>
-      <h4 id="author"></h4>
-    </div>
-  </div>
-
-  <div class="ui vertical stripe quote segment">
-    <div class="ui equal width stackable internally celled grid">
-      <div class="center aligned row">
-        <div class="column music">
-          <h3>Browse Music</h3>
-          <i class="fas fa-arrow-right"></i><strong><a href="https://open.spotify.com/playlist/6NyANZ6bIdvrrEtNFeA3SD"
-              style="text-decoration: none" style="color: black" class="option">Here are some good vibes!</a></strong>
-          <i class="fas fa-arrow-left"></i>
-        </div>
-        <div class="column quote">
-          <h3>Healing Words and Inspiring Quotes</h3>
-
-          <i class="fas fa-arrow-right"></i>
-          <strong><a href="https://quotes-generator.com/" class="option">Find some words of wisdom.</a></strong>
-          <i class="fas fa-arrow-left"></i>
+    <div class="ui inverted vertical masthead center aligned segment">
+      <div class="ui container">
+        <div class="ui large secondary inverted pointing menu">
+          <div class="right item">
+            <h2 class="ui icon header">
+              <img id="logo" src="assets/images/Mood Tracker Logo.PNG" />
+              <div class="content" style="color: white"></div>
+            </h2>
+          </div>
         </div>
       </div>
+
+      <!-- MAIN CONTENT -->
+      <div class="ui text container">
+        <h1 class="ui inverted header">Moodsphere</h1>
+        <h2 id="quote"></h2>
+        <h4 id="author"></h4>
+      </div>
     </div>
-  </div>
 
-  <div class="ui inverted vertical footer segment">
-    <div class="ui container">
-      <h3 class="ui header">Mental Health Hotlines</h3>
-      <li>SAMHSA National Hotline 1(800)662-4357</li>
-      <li>Anxiety and Depression Association of America (ADAA)- (240-485-1001)</li>
-      <li>Depression and Bipolar Support Alliance (DBSA) - (800-826-3632)</li>
-      <li>International OCD Foundation - (617-973-5801)</li>
-      <li>National Center of Excellence of Eating Disorders (NCEED) - (800-931-2237)</li>
-      <li>Schizophrenia and Related Disorders Alliance of America (SARDAA) -(240-423-9432)</li>
-      <li>American Foundation for Suicide Prevention - (888-333-2377)</li>
-      <li>National Domestic Violence Hotline -(800-799-7233)</li>
-      <li>Suicide Prevention Hotline -(800-273-8255)</li>
+    <div class="ui inverted vertical footer segment">
+      <div class="ui container">
+        <h3 class="ui header">Mental Health Hotlines</h3>
+        <table class="ui selectable celled table">
+          <thead>
+            <tr>
+              <td>Hotline</td>
+              <td>Number</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>SAMHSA National Hotline</td>
+              <td>(800) 662-4357</td>
+            </tr>
+            <tr>
+              <td>Anxiety and Depression Association of America (ADAA)</td>
+              <td>(240) 485-1001</td>
+            </tr>
+            <tr>
+              <td>Depression and Bipolar Support Alliance (DBSA)</td>
+              <td>(800) 826-3632</td>
+            </tr>
+            <tr>
+              <td>International OCD Foundation</td>
+              <td>(617) 973-5801</td>
+            </tr>
+            <tr>
+              <td>National Center of Excellence of Eating Disorders (NCEED)</td>
+              <td>(800) 931-2237</td>
+            </tr>
+            <tr>
+              <td>
+                Schizophrenia and Related Disorders Alliance of America (SARDAA)
+              </td>
+              <td>(240) 423-9432</td>
+            </tr>
+            <tr>
+              <td>American Foundation for Suicide Prevention</td>
+              <td>(888) 333-2377</td>
+            </tr>
+            <tr>
+              <td>National Domestic Violence Hotline</td>
+              <td>(800) 799-7233</td>
+            </tr>
+            <tr>
+              <td>Suicide Prevention Hotline</td>
+              <td>(800) 273-8255</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-  </div>
 
-  <!-- FIREBASE -->
-  <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
-  <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-database.js"></script>
+    <!-- FIREBASE -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-database.js"></script>
 
-  <!-- JAVASCRIPT, JQUERY -->
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-  <script type="text/javascript" src="assets/javascript/app.js"></script>
-</body>
-
+    <!-- JAVASCRIPT, JQUERY -->
+    <script
+      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
+  </body>
 </html>
