menu hover states styled

--- a/homepage.html
+++ b/homepage.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
 
     <!-- CUSTOM STYLESHEET -->
-    <link rel="stylesheet" type="text/css" href="assets/css/homepage.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
   </head>
 
   <body>
