small stylesheet changes

--- a/overview.html
+++ b/overview.html
@@ -26,11 +26,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
 
     <!-- CUSTOM STYLESHEET -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/add-entry_overview.css"
-    />
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
   </head>
 
   <body class="site">
@@ -174,7 +170,9 @@
           <div class="field">
             <h3 class="heading">Additional Comments:</h3>
             <textarea id="userComment"></textarea>
-            <button type="submit" id="continue-btn">Continue</button>
+            <button type="submit" id="continue-btn" class="modal-btn">
+              Continue
+            </button>
           </div>
         </div>
       </div>
@@ -206,7 +204,7 @@
           </div>
           <!-- COMMENTS -->
           <div id="display-comments-overview"></div>
-          <button id="close-btn">Close</button>
+          <button id="close-btn" class="modal-btn">Close</button>
         </div>
       </div>
     </main>
