overview table now displays all logs and comments

--- a/overview.html
+++ b/overview.html
@@ -185,6 +185,8 @@
             <tr>
               <td>Date</td>
               <td>Mood</td>
+              <td>Log</td>
+              <td>Comments</td>
             </tr>
           </thead>
           <tbody></tbody>
