menu moved to right

--- a/overview.html
+++ b/overview.html
@@ -32,19 +32,19 @@
   <body class="site">
     <!-- NAVIGATION -->
     <div class="ui secondary pointing menu">
-      <a class="item" href="homepage.html">
-        Home
-      </a>
-      <a id="add-entry-btn" class="item">
-        Add Entry
-      </a>
-      <a class="active item" href="overview.html">
-        Overview
-      </a>
-      <a class="item" href="discover.html">
-        Discover
-      </a>
       <div class="right menu">
+        <a class="item" href="homepage.html">
+          Home
+        </a>
+        <a id="add-entry-btn" class="item">
+          Add Entry
+        </a>
+        <a class="active item" href="overview.html">
+          Overview
+        </a>
+        <a class="item" href="discover.html">
+          Discover
+        </a>
         <a class="ui item" id="logout-btn">
           Logout
         </a>
@@ -185,6 +185,8 @@
             <tr>
               <td>Date</td>
               <td>Mood</td>
+              <td>Log</td>
+              <td>Comments</td>
             </tr>
           </thead>
           <tbody></tbody>
