--- a/discover.html
+++ b/discover.html
@@ -24,6 +24,7 @@
       href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"
     />
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:800&display=swap" rel="stylesheet">
 
     <!-- CUSTOM STYLESHEET -->
     <link rel="stylesheet" type="text/css" href="assets/css/discover.css" />
@@ -32,6 +33,8 @@
   <body class="site">
     <!-- NAVIGATION -->
     <div class="ui sticky secondary pointing menu">
+      <img src="#" alt="Moodsphere Logo" />
+      <p class="ui header item">Moodsphere</p>
       <div class="right menu">
         <a class="item" href="homepage.html">
         Home
