--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       rel="stylesheet"
       href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Fira+Sans:800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/log-in.css" />
   </head>
 
