weather api works

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     <div class="ui middle aligned center aligned grid">
       <div class="column">
         <h2 class="ui image header">
-          <img src="./assets/pattern/Mood Tracker Logo.PNG" class="image" />
+          <img
+            class="app-logo"
+            src="assets/images/moodsphere.svg"
+            alt="Moodsphere Logo"
+          />
           <div class="content"></div>
         </h2>
         <form class="ui large form">
