--- a/overview.html
+++ b/overview.html
@@ -36,8 +36,12 @@
   <body class="site">
     <!-- NAVIGATION -->
     <div class="ui secondary pointing menu">
-      <img src="#" alt="Moodsphere Logo" />
-      <p class="ui header item">Moodsphere</p>
+      <img
+        class="app-logo"
+        src="assets/images/moodsphere.svg"
+        alt="Moodsphere Logo"
+      />
+      <p class="ui header item app-name">Moodsphere</p>
       <div class="right menu">
         <a class="item" href="homepage.html">
           Home
