--- a/homepage.html
+++ b/homepage.html
@@ -40,8 +40,12 @@
   <body>
     <!-- NAVIGATION -->
     <div class="ui sticky secondary pointing menu">
-      <img src="#" alt="Moodsphere Logo" />
-      <p class="ui header item">Moodsphere</p>
+      <img
+        class="app-logo"
+        src="assets/images/moodsphere.svg"
+        alt="Moodsphere Logo"
+      />
+      <p class="ui header item app-name">Moodsphere</p>
       <div class="right menu">
         <a class="active item" href="homepage.html">
           Home
@@ -63,15 +67,16 @@
 
     <div class="ui inverted vertical masthead center aligned segment">
       <div class="ui container">
-        <div class="ui large secondary inverted pointing menu"></div>
-      </div>
-
-      <!-- MAIN CONTENT -->
-      <div class="ui text container">
-        <h1 class="ui inverted header">Moodsphere</h1>
-        <h2 id="quote"></h2>
-        <hr class="short" />
-        <h4 id="author"></h4>
+        <!-- MAIN CONTENT -->
+        <div class="ui text container">
+          <div id="weather">
+            <p id="display-date"></p>
+          </div>
+          <h1 class="ui inverted header">Welcome!</h1>
+          <h2 id="quote"></h2>
+          <hr class="short" />
+          <h4 id="author"></h4>
+        </div>
       </div>
     </div>
 
