--- a/homepage.html
+++ b/homepage.html
@@ -66,9 +66,9 @@
     </div>
 
     <div class="ui inverted vertical masthead center aligned segment">
-      <div class="ui container">
+      <div class="jumbotron">
         <!-- MAIN CONTENT -->
-        <div class="ui text container">
+        <div class="header-container">
           <div id="weather">
             <p id="display-date"></p>
           </div>
