--- a/overview.html
+++ b/overview.html
@@ -35,7 +35,7 @@
 
   <body class="site">
     <!-- NAVIGATION -->
-    <div class="ui secondary pointing menu">
+    <div class="ui sticky secondary pointing menu">
       <img
         class="app-logo"
         src="assets/images/moodsphere.svg"
