--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- STANDARD META -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
+
+    <!-- SITE PROPERTIES -->
     <title>Moodsphere - Log In</title>
 
-    <!-- STYLESHEETS: SEMANTIC UI, GOOGLE FONTS, CUSTOM -->
+    <!-- STYLESHEETS: SEMANTIC UI, ICONS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
@@ -25,22 +31,22 @@
       href="https://fonts.googleapis.com/css?family=Fira+Sans:800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/log-in.css" />
-  </head>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
 
-  <body>
-    <!-- LOG IN / SIGN UP FORM -->
-    <div class="ui middle aligned center aligned grid">
-      <div class="column">
-        <h2 class="ui image header">
-          <img
-            class="app-logo"
-            src="assets/images/moodsphere.svg"
-            alt="Moodsphere Logo"
-          />
-          <div class="content"></div>
-        </h2>
-        <form class="ui large form">
+    <!-- CUSTOM STYLESHEET -->
+    <link rel="stylesheet" type="text/css" href="assets/css/log-in.css" />
+  </head>
+</html>
+
+<body class="site">
+  <!-- LOG IN / SIGN UP FORM -->
+  <div class="site-content">
+    <div class="content">
+      <div class="login-logo-div">
+    <img class="login-logo" src="assets/images/moodsphere_white.svg" alt="Moodsphere Logo">
+    <h1 class="login-heading">Moodsphere</h1>
+    </div>
+    <form class="ui large form">
           <div class="ui stacked segment">
             <div class="field">
               <div class="ui left icon input">
@@ -67,31 +73,16 @@
             <button class="ui fluid large submit button" id="login-btn">
               Log In
             </button>
-          </div>
-
-          <!-- ERROR MESSAGES -->
-          <div id="password-error-message" class="ui error message">
-            <h3>Password must contain the following:</h3>
-            <p id="capital" class="invalid">
-              A <strong>capital (uppercase)</strong> letter
-            </p>
-            <p id="number" class="invalid">A <strong>number</strong></p>
-            <p id="length" class="invalid">
-              Minimum <strong>8 characters</strong>
-            </p>
-          </div>
-        </form>
-
-        <div class="ui message">
+    </form>
+    </div> 
+    <div class="ui message">
           Don't have an account, yet?
           <button id="signup-btn" class="ui small submit button">
             Sign Up
           </button>
         </div>
-      </div>
-    </div>
 
-    <!-- FIREBASE -->
+  <!-- FIREBASE -->
     <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
@@ -104,6 +95,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script type="text/javascript" src="assets/javascript/log-in.js"></script>
-  </body>
+
+</body>
 </html>
