--- a/overview.html
+++ b/overview.html
@@ -188,7 +188,7 @@
       </div>
     </main>
 
-    <main class="site-content">
+    <main class="site-content overview">
       <div class="table-div">
         <table id="tracker-table" class="ui very basic selectable celled table">
           <thead id="category">
